--- a/clients/Android/Grapevine/app/src/main/res/layout/activity_calendar_view.xml
+++ b/clients/Android/Grapevine/app/src/main/res/layout/activity_calendar_view.xml
@@ -1,5 +1,4 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/fragment"
-    android:name="cs.lmu.grapevine.CalendarViewFragment"
-    tools:layout="@layout/fragment_calendar_view" android:layout_width="match_parent"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/calendar_fragment_container"
+    android:layout_width="match_parent"
     android:layout_height="match_parent" />
