--- a/clients/Android/Grapevine/app/src/main/res/layout/activity_main_login.xml
+++ b/clients/Android/Grapevine/app/src/main/res/layout/activity_main_login.xml
@@ -65,7 +65,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:id="@+id/login_status"/>
+                android:id="@+id/login_status"
+                android:textColor="@color/red"/>
 
         </LinearLayout>
     </ScrollView>
