--- a/clients/Android/Grapevine/app/src/main/res/layout/register_user.xml
+++ b/clients/Android/Grapevine/app/src/main/res/layout/register_user.xml
@@ -4,29 +4,15 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="cs.lmu.grapevine.CreateNewAccount">
+    tools:context="cs.lmu.grapevine.RegisterUser">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/create_account_username"/>
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            android:hint="@string/create_account_email"/>
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/create_account_first_name"/>
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/create_account_last_name"/>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -41,7 +27,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/login_create_account"/>
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/create_user_status"
+            android:textColor="@color/red"/>
     </LinearLayout>
-
 </RelativeLayout>
