--- a/clients/Android/Grapevine/app/src/main/res/layout/event_feed.xml
+++ b/clients/Android/Grapevine/app/src/main/res/layout/event_feed.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="cs.lmu.grapevine.FeedEvents">
+    tools:context="cs.lmu.grapevine.activities.EventFeed">
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
