--- a/clients/Android/Grapevine/app/src/main/res/layout/event_feed.xml
+++ b/clients/Android/Grapevine/app/src/main/res/layout/event_feed.xml
@@ -5,6 +5,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="cs.lmu.grapevine.activities.EventFeed">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/empty_message"/>
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
